Prevents page from scrolling when piece is dragged off screen

--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
 }
 
 .Board {
